--- a/css/styles.css
+++ b/css/styles.css
@@ -285,6 +285,9 @@ small,
 		justify-content: flex-start;
 	}
 	@media (max-height: 600px) {
+		height: 100%;
+	}
+	@media (max-height: 460px) {
 		height: auto;
 	}
 }
@@ -294,6 +297,12 @@ small,
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	@media (max-width: 768px) {
+		align-items: flex-start;
+	}
+	@media (max-height: 600px) {
+		align-items: flex-start;
+	}
 }
 .form-outer-container {
 	width: 100%;
@@ -306,8 +315,9 @@ small,
 	border-radius: 45px;
 	padding: 60px;
 	min-height: 460px;
-	@media (max-width: 768px) {
+	@media (max-width: 768px), (max-height: 600px) {
 		background-color: transparent;
+		padding: 10px;
 	}
 }
 .form-inner-container {
@@ -326,6 +336,8 @@ small,
 	z-index: 9999;
 	font-size: 20px;
 	cursor: pointer;
+	/* temp display none */
+	display: none;
 	@media (max-width: 768px) {
 		font-size: 28px;
 	}
@@ -336,43 +348,24 @@ small,
 }
 
 .transparency {
-	height: 90px;
+	height: 60px;
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	z-index: 999;
-	background: linear-gradient(
-		to bottom,
-		white 0%,
-		rgba(255, 255, 255, 0.4) 79%,
-		rgba(255, 255, 255, 0) 69%
-	);
-	@media (max-width: 768px) {
-		background: linear-gradient(
-			to bottom,
-			rgba(232, 250, 255, 1) 0%,
-			rgba(232, 250, 255, 0.4) 79%,
-			rgba(232, 250, 255, 0) 100%
-		);
+	background: rgba(255, 255, 255, 0.8);
+	@media (max-width: 768px), (max-height: 600px) {
+		background: transparent;
 	}
 }
 .transparency.bottom-transparency {
 	top: auto;
 	bottom: 0;
-	background: linear-gradient(
-		to top,
-		white 0%,
-		rgba(255, 255, 255, 0.4) 79%,
-		rgba(255, 255, 255, 0) 69%
-	);
-	@media (max-width: 768px) {
-		background: linear-gradient(
-			to top,
-			rgba(232, 250, 255, 1) 0%,
-			rgba(232, 250, 255, 0.4) 79%,
-			rgba(232, 250, 255, 0) 100%
-		);
+	height: 70px;
+	background: rgba(255, 255, 255, 0.8);
+	@media (max-width: 768px), (max-height: 600px) {
+		background: transparent;
 	}
 }
 .visible-container {
@@ -395,8 +388,22 @@ small,
 	align-items: flex-start;
 	justify-content: flex-start;
 	flex-direction: column;
-	margin-bottom: 20px;
+	/* margin-bottom: 20px; */
 	overflow: hidden;
+	@media (max-width: 768px), (max-height: 600px) {
+		opacity: 0.3;
+	}
+}
+.input-container.current {
+	width: 100%;
+	height: 75px;
+	display: flex;
+	align-items: flex-start;
+	justify-content: flex-start;
+	flex-direction: column;
+
+	overflow: hidden;
+	opacity: 1;
 }
 
 .input-container .error p {
