--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,7 @@ h3,
 h4,
 h5 {
 	font-weight: true;
-	line-height: 1.15;
+	line-height: 1;
 }
 h1,
 .text-size-h1 {
@@ -155,6 +155,11 @@ h5,
 
 .text-caption {
 	font-size: 0.8em;
+}
+.text-size-h1 {
+	@media (max-width: 768px) {
+		display: none;
+	}
 }
 
 small,
@@ -309,7 +314,7 @@ small,
 	height: 50%;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: flex-start;
 	background-color: white;
 	max-width: 550px;
 	border-radius: 45px;
